# file-monitor

./: CLAUDE.md  Cargo.toml  FAQ.md  README.md
docs/superpowers/plans/: 2026-06-17-file-integrity-monitor-plan.md
docs/superpowers/specs/: 2026-06-17-file-integrity-monitor-design.md  2026-06-18-file-logging-design.md
src/: config.rs  lib.rs  mailer.rs  main.rs  monitor.rs  store.rs
tests/: integration_test.rs
