[package]
name = "file_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
ctrlc = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "rustls-tls",
    "smtp-transport",
    "tokio1-rustls-tls",
] }

[dev-dependencies]
tempfile = "3"
